sync kaitiaki context & push
